--- a/index.Rmd
+++ b/index.Rmd
@@ -41,8 +41,8 @@ Hardwicke, T. E., & Wagenmakers, E.-J. (preprint). Reducing bias, increasing tra
 Hardwicke, T. E., Thibault, R. T., Kosie, J. E., Tzavella, L., Bendixen, T., Handcock, S. A. Köneke, V. E., Ioannidis, J. P. A. (in press). Post-publication critique at top-ranked journals across scientific disciplines: A cross-sectional assessment of policies and practice. *Royal Society Open Science*.  
 [[preprint]](https://doi.org/hc7d) [[preregistration]](https://osf.io/hjvnw/) [[data]](https://osf.io/8b6jy/) [[materials]](https://osf.io/8b6jy/) [[analysis-code]](https://osf.io/8b6jy/) [[reproducible-container]](https://doi.org/10.24433/CO.3805142.v1)
 
-TARG Meta-Research Group & Collaborators, Thibault, R. T., Hardwicke, T. E., Clark, R. W. A., Pennington, C. R., Nilsonne, G., O'Mahony, A., Drax, K., Thompson, J., Munafò, M. R. (in press). Discrepancy review: A feasibility study of a novel peer review intervention to reduce undisclosed discrepancies between registrations and publications. *Royal Society Open Science*.  
-[[preprint]](https://doi.org/hdgv) [[preregistration]](https://osf.io/w3bkt/) [[data]](https://osf.io/25ebk/) [[materials]](https://osf.io/5dh47/files) [[analysis-code]](https://osf.io/25ebk/) [[reproducible-container]](https://doi.org/10.24433/CO.9942414.v1)
+TARG Meta-Research Group & Collaborators [Thibault, R. T., Hardwicke, T. E., Clark, R. W. A., Pennington, C. R., Nilsonne, G., O'Mahony, A., Drax, K., Thompson, J., Munafò, M. R.] (2022). Discrepancy review: A feasibility study of a novel peer review intervention to reduce undisclosed discrepancies between registrations and publications. *Royal Society Open Science*, *9*, 220142.  
+[[paper]](https://doi.org/10.1098/rsos.220142) [[preprint]](https://doi.org/hdgv) [[preregistration]](https://osf.io/w3bkt/) [[data]](https://osf.io/25ebk/) [[materials]](https://osf.io/5dh47/files) [[analysis-code]](https://osf.io/25ebk/) [[reproducible-container]](https://doi.org/10.24433/CO.9942414.v1)
 
 Nosek, B. A., Hardwicke, T. E., Moshontz, H., Allard, A., Corker, K. S., Dreber, A., Fidler, F., Hilgard, J., Kline Struhl, M., Nuijten, M., Rohrer, J., Romero, F., Scheel., A., Scherer, L., Schönbrodt, F., & Vazire, S. (2022). Replicability, robustness, and reproducibility in psychological science. *Annual Review of Psychology*, *73*, 719-748.  
 [[paper]](http://www.annualreviews.org/eprint/BEG4HHRDH6R6UHSGU3YR/full/10.1146/annurev-psych-020821-114157) [[preprint]](https://doi.org/ftzw) [[preregistration]](https://osf.io/7np92/) [[materials]](https://osf.io/7np92/) [[data]](https://osf.io/7np92/) [[analysis-code]](https://osf.io/7np92/) [[reproducible-container]](https://doi.org/10.24433/CO.4977248.v1)
