--- a/index.Rmd
+++ b/index.Rmd
@@ -38,8 +38,8 @@ Hardwicke, T. E., & Wagenmakers, E.-J. (preprint). Reducing bias, increasing tra
 
 #### 2022
 
-Hardwicke, T. E., Thibault, R. T., Kosie, J. E., Tzavella, L., Bendixen, T., Handcock, S. A. Köneke, V. E., Ioannidis, J. P. A. (in press). Post-publication critique at top-ranked journals across scientific disciplines: A cross-sectional assessment of policies and practice. *Royal Society Open Science*.  
-[[preprint]](https://doi.org/hc7d) [[preregistration]](https://osf.io/hjvnw/) [[data]](https://osf.io/8b6jy/) [[materials]](https://osf.io/8b6jy/) [[analysis-code]](https://osf.io/8b6jy/) [[reproducible-container]](https://doi.org/10.24433/CO.3805142.v1)
+Hardwicke, T. E., Thibault, R. T., Kosie, J. E., Tzavella, L., Bendixen, T., Handcock, S. A. Köneke, V. E., Ioannidis, J. P. A. (2022). Post-publication critique at top-ranked journals across scientific disciplines: A cross-sectional assessment of policies and practice. *Royal Society Open Science*, *9*, 220139. 
+[[paper]](https://dx.doi.org/10.1098/rsos.220139) [[preprint]](https://doi.org/hc7d) [[preregistration]](https://osf.io/hjvnw/) [[data]](https://osf.io/8b6jy/) [[materials]](https://osf.io/8b6jy/) [[analysis-code]](https://osf.io/8b6jy/) [[reproducible-container]](https://doi.org/10.24433/CO.3805142.v2)
 
 TARG Meta-Research Group & Collaborators [Thibault, R. T., Hardwicke, T. E., Clark, R. W. A., Pennington, C. R., Nilsonne, G., O'Mahony, A., Drax, K., Thompson, J., Munafò, M. R.] (2022). Discrepancy review: A feasibility study of a novel peer review intervention to reduce undisclosed discrepancies between registrations and publications. *Royal Society Open Science*, *9*, 220142.  
 [[paper]](https://doi.org/10.1098/rsos.220142) [[preprint]](https://doi.org/hdgv) [[preregistration]](https://osf.io/w3bkt/) [[data]](https://osf.io/25ebk/) [[materials]](https://osf.io/5dh47/files) [[analysis-code]](https://osf.io/25ebk/) [[reproducible-container]](https://doi.org/10.24433/CO.9942414.v1)
