--- a/index.Rmd
+++ b/index.Rmd
@@ -40,7 +40,7 @@ TARG Meta-Research Group & Collaborators [Thibault, R. T., Hardwicke, T. E., Cla
 [[paper]](https://doi.org/10.1098/rsos.220142) [[preprint]](https://doi.org/hdgv) [[preregistration]](https://osf.io/w3bkt/) [[data]](https://osf.io/25ebk/) [[materials]](https://osf.io/5dh47/files) [[analysis-code]](https://osf.io/25ebk/) [[reproducible-container]](https://doi.org/10.24433/CO.9942414.v1)
 
 Nosek, B. A., Hardwicke, T. E., Moshontz, H., Allard, A., Corker, K. S., Dreber, A., Fidler, F., Hilgard, J., Kline Struhl, M., Nuijten, M., Rohrer, J., Romero, F., Scheel., A., Scherer, L., Schönbrodt, F., & Vazire, S. (2022). Replicability, robustness, and reproducibility in psychological science. *Annual Review of Psychology*, *73*, 719-748.  
-[[paper]](http://www.annualreviews.org/eprint/BEG4HHRDH6R6UHSGU3YR/full/10.1146/annurev-psych-020821-114157) [[preprint]](https://doi.org/ftzw) [[preregistration]](https://osf.io/7np92/) [[materials]](https://osf.io/7np92/) [[data]](https://osf.io/7np92/) [[analysis-code]](https://osf.io/7np92/) [[reproducible-container]](https://doi.org/10.24433/CO.4977248.v1)
+[[paper]](http://www.annualreviews.org/eprint/BEG4HHRDH6R6UHSGU3YR/full/10.1146/annurev-psych-020821-114157) [[preprint]](https://doi.org/ftzw) [[preregistration]](https://osf.io/vg9zy) [[materials]](https://osf.io/7np92/) [[data]](https://osf.io/7np92/) [[analysis-code]](https://osf.io/7np92/) [[reproducible-container]](https://doi.org/10.24433/CO.4977248.v1)
 
 Hardwicke, T. E., Thibault, R. T., Kosie, J. E., Wallach, J. D., Kidwell, M. C., & Ioannidis, J. P. A. (2022). Estimating the prevalence of transparency and reproducibility-related research practices in psychology (2014-2017). *Perspectives on Psychological Science*, *17*(1), 239-251.  
 [[paper]](https://doi.org/10.1177%2F1745691620979806) [[preprint]](https://doi.org/10.31222/osf.io/9sz2y) [[preregistration]](https://osf.io/q96eh/) [[materials]](https://osf.io/c89sy/) [[data]](https://osf.io/5qmz7/) [[analysis-code]](https://osf.io/gfjtq/) [[reproducible-container]](https://doi.org/10.24433/CO.1618143.v2)
