--- a/index.Rmd
+++ b/index.Rmd
@@ -29,7 +29,7 @@ Fernández, L. M., Hardwicke, T. E., & Vadillo, M. A. (preprint). Retracted pape
 
 #### 2023
 
-Hardwicke, T. E., & Vazire, S. (2023). Transparency is now the default at Psychological Science. *Psychological Science*, 09567976231221573.  
+Hardwicke, T. E., & Vazire, S. (2023). Transparency is now the default at Psychological Science [editorial]. *Psychological Science*, 09567976231221573.  
 [[paper]](https://doi.org/10.1177/09567976231221573)
 
 Thibault, R. T., Kovacs, M., Hardwicke, T. E., Sarafoglou, A., Ioannidis, J. P., & Munafo, M. R. (2023). Reducing bias in secondary data analysis via an Explore and Confirm Analysis Workflow (ECAW): A proposal and survey of observational researchers. *Royal Society Open Science*, *10*, 230568.  
