--- a/index.Rmd
+++ b/index.Rmd
@@ -98,7 +98,7 @@ Hardwicke, T. E., Mathur, M. B., MacDonald, K., Nilsonne, G., Banks, G. C., Kidw
 [[paper]](https://dx.doi.org/10.1098/rsos.180448) [[preprint]](https://dx.doi.org/10.17605/OSF.IO/39CFB) [[preregistration]](https://osf.io/q4qy3/) [[materials]](https://osf.io/k2mdr/) [[data]](https://osf.io/6s8b3/) [[analysis-code]](https://osf.io/wf3as/) [[reproducible-container]](https://doi.org/10.24433/CO.abd8b483-c5e3-4382-a493-1fc5aecb0f1d.v2)  [[blog1]](https://tomhardwicke.netlify.app/blog/psychology-reproducibility/) [[blog2]](https://tomhardwicke.netlify.app/blog/open-data-reusability/) [[comment]](https://doi.org/10.1016/j.cognition.2018.10.008)
 
 Hardwicke, T. E. & Ioannidis, J. P. A. (2018). Populating the Data Ark: An attempt to retrieve, preserve, and liberate data from the most highly-cited psychology and psychiatry articles. *PLOS ONE*, *13*, e0201856.  
-[[paper]](https://doi.org/10.1371/journal.pone.0201856) [[materials]](https://osf.io/4dum6/) [[data]](https://osf.io/r38qu/) [[analysis-code]](https://osf.io/7syrt/) [[reproducible-container]](https://doi.org/10.24433/CO.241ffbb1-5b81-44bd-94f4-d066b62c5f7f.v2) [[blog]](https://tomhardwicke.netlify.app/blog/attrition-scholarly-record/) [[media]](https://blogs.discovermagazine.com/neuroskeptic/2018/08/06/how-accessible-is-psychology-data/)
+[[paper]](https://doi.org/10.1371/journal.pone.0201856) [[materials]](https://osf.io/4dum6/) [[data]](https://osf.io/r38qu/) [[analysis-code]](https://osf.io/7syrt/) [[reproducible-container]](https://doi.org/10.24433/CO.241ffbb1-5b81-44bd-94f4-d066b62c5f7f.v2)
 
 Hardwicke, T. E., Henry Tessler, M., Peloquin, B., & Frank, M. C. (2018). A Bayesian decision-making framework for replication. *Behavioral and Brain Sciences*, *41*, e132.  
 [[paper]](https://doi.org/10.1017/S0140525X18000675) [[preprint]](https://dx.doi.org/10.17605/OSF.IO/N3YAH)
