--- a/index.Rmd
+++ b/index.Rmd
@@ -18,14 +18,16 @@ output:
 Hardwicke, T. E., Schiavone, S., Clarke, B., Vazire, S. (accepted in principle). Finding the right words to evaluate research: An empirical appraisal of eLife’s assessment vocabulary [Stage One Registered Report]. *Peer Community in Registered Reports*.  
 [[preregistration]](https://doi.org/10.17605/OSF.IO/MKBTP)
 
-Dulitzki, C., Crane, S. M., Hardwicke, T. E., & Ioannidis, J. P. A. (preprint). Expanding the Data Ark: An attempt to make the data from highly cited social science papers publicly available. *MetaArXiv*.  
-[[preprint]](https://osf.io/preprints/metaarxiv/w9crz/) [[data]](https://osf.io/3kuwq/) [[preregistration]](https://osf.io/697wx) [[materials]](https://osf.io/3kuwq/) [[analysis-code]](https://osf.io/3kuwq/) [[reproducible-container]](https://doi.org/10.24433/CO.5136309.v2)
-
 Frank, M. C., Braginsky, M., Cachia, J., Coles, N., Hardwicke, T. E., Hawkins, R., Mathur, M., & Williams, R. (in preparation). Experimentology: An open science approach to experimental psychology methods. MIT Press.  
 [[open access book]](https://experimentology.io)
 
 Fernández, L. M., Hardwicke, T. E., & Vadillo, M. A. (preprint). Retracted papers clinging on to life: An observational study of post-retraction citations in psychology. *PsyArXiv*.  
 [[preprint]](https://doi.org/hcht) [[data]](https://osf.io/t73rk/) [[analysis-code]](https://osf.io/t73rk/)
+
+#### 2024
+
+Dulitzki, C., Crane, S. M., Hardwicke, T. E., & Ioannidis, J. P. A. (in press). Expanding the Data Ark: An attempt to make the data from highly cited social science papers publicly available. *Royal Society Open Science*.  
+[[preprint]](https://osf.io/preprints/metaarxiv/w9crz/) [[data]](https://osf.io/3kuwq/) [[preregistration]](https://osf.io/697wx) [[materials]](https://osf.io/3kuwq/) [[analysis-code]](https://osf.io/3kuwq/) [[reproducible-container]](https://doi.org/10.24433/CO.5136309.v2)
 
 #### 2023
 
