--- a/index.Rmd
+++ b/index.Rmd
@@ -27,7 +27,7 @@ Fernández, L. M., Hardwicke, T. E., & Vadillo, M. A. (preprint). Retracted pape
 #### 2024
 
 Dulitzki, C., Crane, S. M., Hardwicke, T. E., & Ioannidis, J. P. A. (in press). Expanding the Data Ark: An attempt to make the data from highly cited social science papers publicly available. *Royal Society Open Science*.  
-[[preprint]](https://osf.io/preprints/metaarxiv/w9crz/) [[data]](https://osf.io/3kuwq/) [[preregistration]](https://osf.io/697wx) [[materials]](https://osf.io/3kuwq/) [[analysis-code]](https://osf.io/3kuwq/) [[reproducible-container]](https://doi.org/10.24433/CO.5136309.v2)
+[[preprint]](https://osf.io/preprints/metaarxiv/w9crz/) [[preregistration]](https://osf.io/697wx) [[data]](https://osf.io/3kuwq/) [[materials]](https://osf.io/3kuwq/) [[analysis-code]](https://osf.io/3kuwq/) [[reproducible-container]](https://doi.org/10.24433/CO.5136309.v2)
 
 #### 2023
 
