--- a/index.Rmd
+++ b/index.Rmd
@@ -15,6 +15,9 @@ output:
 
 #### Preprints
 
+Sandoval-Lentisco, A., Tortajada, M., López-Nicolás, R., López-López, J. A., Wagenmakers, E.J., Sánchez-Meca, J., & **Hardwicke, T. E.** (submitted). Preregistration of psychology meta-analyses: A cross-sectional study of prevalence and practice.  
+[[preprint]](https://osf.io/preprints/metaarxiv/627a4) [[preregistration]](https://osf.io/rnv5c) [[data]](https://osf.io/ru5h4/) [[materials]](https://osf.io/ru5h4/) [[analysis-code]](https://osf.io/ru5h4/)
+
 **Hardwicke, T. E.**, Schiavone, S. R., Clarke, B., & Vazire, S. (Registered Report accepted in principle). Finding the right words to evaluate research: An empirical appraisal of eLife’s assessment vocabulary. *PLOS Biology*.  
 [[preprint]](https://doi.org/10.1101/2024.04.30.591844) [[preregistration]](https://doi.org/10.17605/OSF.IO/MKBTP) [[data]](https://osf.io/mw2q4/files/osfstorage) [[materials]](https://osf.io/mw2q4/files/osfstorage) [[analysis-code]](https://osf.io/mw2q4/files/osfstorage) [[reproducible-container]](https://doi.org/10.24433/CO.4128032.v1)
 
