--- a/index.Rmd
+++ b/index.Rmd
@@ -44,6 +44,7 @@ Fernández, L. M., **Hardwicke, T. E.**, & Vadillo, M. A. (preprint). Retracted 
 <a href="https://doi.org/10.21428/e2759450.cdacaf45" class="btn btn-sm btn-paper" role="button">open access book chapter</a>
 
 **Hardwicke, T. E.**, Schiavone, S. R., Clarke, B., & Vazire, S. (2024). An empirical appraisal of eLife’s assessment vocabulary [Registered Report]. *PLOS Biology*, *22*(8), e3002645.  
+<a href="https://doi.org/10.1371/journal.pbio.3002645" class="btn btn-sm btn-paper" role="button">paper</a>
 <a href="https://doi.org/10.1101/2024.04.30.591844" class="btn btn-sm btn-preprint" role="button">preprint</a>
 <a href="https://doi.org/10.17605/OSF.IO/MKBTP" class="btn btn-sm btn-prereg" role="button">preregistration</a>
 <a href="https://osf.io/mw2q4/files/osfstorage" class="btn btn-sm btn-mat" role="button">materials</a>
