--- a/index.Rmd
+++ b/index.Rmd
@@ -15,14 +15,6 @@ output:
 
 #### Preprints
 
-**Hardwicke, T. E.**, Thibault, R. T., Clarke, B., Moodie, N., Crüwell, S., Schiavone, S. R., Handcock, S. A., Nghiem, K. A., Mody, F., Erole, T., & Vazire, S. (submitted). Prevalence of transparent research practices in psychology: A cross-sectional study of empirical articles published in 2022.  
-<a href="https://osf.io/preprints/psyarxiv/t2zs9" class="btn btn-sm btn-preprint" role="button">preprint</a>
-<a href="https://osf.io/xh6mg" class="btn btn-sm btn-prereg" role="button">preregistration</a>
-<a href="https://osf.io/yck93/" class="btn btn-sm btn-mat" role="button">materials</a>
-<a href="https://osf.io/yck93/" class="btn btn-sm btn-data" role="button">data</a>
-<a href="https://osf.io/yck93/" class="btn btn-sm btn-code" role="button">analysis-code</a>
-<a href="https://doi.org/10.24433/CO.5081898.v2" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
-
 Sandoval-Lentisco, A., Tortajada, M., López-Nicolás, R., López-López, J. A., Wagenmakers, E.J., Sánchez-Meca, J., & **Hardwicke, T. E.** (submitted). Preregistration of psychology meta-analyses: A cross-sectional study of prevalence and practice.  
 <a href="https://osf.io/preprints/metaarxiv/627a4" class="btn btn-sm btn-preprint" role="button">preprint</a>
 <a href="https://osf.io/rnv5c" class="btn btn-sm btn-prereg" role="button">preregistration</a>
@@ -39,6 +31,14 @@ Fernández, L. M., **Hardwicke, T. E.**, & Vadillo, M. A. (preprint). Retracted 
 <a href="https://osf.io/t73rk/" class="btn btn-sm btn-code" role="button">analysis-code</a>
 
 #### 2024
+
+**Hardwicke, T. E.**, Thibault, R. T., Clarke, B., Moodie, N., Crüwell, S., Schiavone, S. R., Handcock, S. A., Nghiem, K. A., Mody, F., Erole, T., & Vazire, S. (in press). Prevalence of transparent research practices in psychology: A cross-sectional study of empirical articles published in 2022. *Advances in Methods and Practices in Psychological Science*.  
+<a href="https://osf.io/preprints/psyarxiv/t2zs9" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/xh6mg" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/yck93/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/yck93/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/yck93/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.5081898.v2" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 **Hardwicke, T. E.** & Vazire, S. (2024). Open science. In Frank, M. C. & Majid, A. (Eds). *The Open Encyclopedia of Cognitive Science*. MIT Press.  
 <a href="https://doi.org/10.21428/e2759450.cdacaf45" class="btn btn-sm btn-paper" role="button">open access book chapter</a>
